# tanulmanyi-versenyek

./: .gitignore  01_raw_downloader.py  02_html_parser.py  03_download_helper_data.py  03_merger_and_excel.py  04_merger_and_excel.py  LICENSE  README-ai-rules.md  README-ai.md  README.md  RELEASE_NOTES.en.md  RELEASE_NOTES.hu.md  config.yaml  profile_04_script.py  pyproject.toml  pytest.ini  run_notebook_in_docker.sh  run_notebook_with_poetry.sh  step1-requirements.md  step2-design.md  step3-breakdown-plan.md  step4-coding-summary-step1.2-directory-structure.md  step4-coding-summary-step1.4-test-config-module.md  step4-coding-summary-step2.3-implement-and-test-get-available-years.md  step4-coding-summary-step2.6-manual-e2e-test.md  step4-coding-summary-step3.1-implement-parser-skeleton.md  step4-coding-summary-step3.4-data-cleaning-transformation.md  step4-coding-summary-step3.7-manual-e2e-parser-test.md  step4-coding-summary-step4.6.1-fix-merge-logic-and-validation.md
ai-notes/: README-ai-rules.md  README-ai.md  prompt-for-release-notes.md  prompt-update-ai-rules.md
config/: city_mapping.csv  school_mapping.csv
dev-history/v0.1/: step2-design.md  step4-coding-summary-step1.1-project-setup.md  step4-coding-summary-step1.3-config-module.md  (+16 more)
notebooks/: README.md  competition_analysis.ipynb
src/common/: config.py
templates/: report_template.ods  report_template.xlsx
tests/: test_city_checker.py  test_config.py  test_downloader.py  test_integration.py  test_kir_downloader.py  test_merger.py  test_notebook_helpers.py  test_parser.py  test_school_matcher.py
(+52 files in other folders)
